# fastapi-starter

./: .coverage  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  start-dev.bat  start-dev.sh  start-prod.bat  start-prod.sh  test_api.py
app/: __init__.py  main.py
app/api/routes/: __init__.py  general.py
app/config/: settings.py
app/middleware/: logging.py
app/models/: schemas.py
fastapi_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openspec/changes/archive/2026-02-27-fastapi-skeleton/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-27-update-uv-documentation/: tasks.md
openspec/changes/update-uv-documentation/: .openspec.yaml  design.md  proposal.md
tests/: test_main.py
